--- a/GameEngineCore/CMakeLists.txt
+++ b/GameEngineCore/CMakeLists.txt
@@ -13,7 +13,7 @@ add_custom_command(
     TARGET GameEngineCoreShaders
     PRE_BUILD
     COMMAND ${CMAKE_COMMAND}
-    -DSOURCE_DIR="${CMAKE_CURRENT_SOURCE_DIR}/src/Shaders"
+    -DSOURCE_DIR="${CMAKE_CURRENT_SOURCE_DIR}/src"
     -DOUTPUT_DIR="${CMAKE_BINARY_DIR}/shaders/GameEngineCore"
     -DGLSLC_EXECUTABLE="${Vulkan_GLSLC_EXECUTABLE}"
     -P "${CMAKE_SOURCE_DIR}/cmake/CompileShaders.cmake"
