--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 # Build directories
+buildXcode/
+buildMake/
 build/
 build/bin/
 build/bin-int/
@@ -73,3 +75,6 @@ Thumbs.db
 .DS_Store?
 ehthumbs.db
 Icon?
+
+# Shader compilation cache
+*/.timestamps/
