--- a/GameEngineCore/CMakeLists.txt
+++ b/GameEngineCore/CMakeLists.txt
@@ -23,6 +23,7 @@ add_custom_command(
 target_compile_definitions(GameEngineCore 
     PUBLIC 
         GLFW_INCLUDE_VULKAN
+        STB_IMAGE_IMPLEMENTATION
     PRIVATE
         $<$<CONFIG:Debug>:DEBUG>
         $<$<CONFIG:Release>:NDEBUG>
@@ -31,6 +32,7 @@ target_compile_definitions(GameEngineCore
 target_include_directories(GameEngineCore
     PUBLIC 
         ${CMAKE_CURRENT_SOURCE_DIR}/src
+        ${stb_image_SOURCE_DIR}
     PRIVATE
         ${Vulkan_INCLUDE_DIRS}
 )
